--- a/index.html
+++ b/index.html
@@ -2099,7 +2099,8 @@
       const USER_ACCOUNTS = {
           'ADMIN001': { password: 'Admin@123', role: 'admin', name: 'مدير النظام العام', branch: 'all' },
           'MANAGER001': { password: 'Manager@123', role: 'manager', name: 'مدير عام', branch: 'all' },
-         
+           '3945': { password: 'Deema@123', role: 'librarian', name: 'ديما مبارك السلامة', branch: 'حائل' },
+         '3945': { password: 'LIB@123', role: 'librarian', name: 'سارة عادل الصلحاني', branch: 'حائل' },
       };
 
       let currentUser = { role: '', membershipNumber: '', name: '', branch: '', authenticated: false };
