--- a/index.html
+++ b/index.html
@@ -2101,6 +2101,10 @@
           'MANAGER001': { password: 'Manager@123', role: 'manager', name: 'مدير عام', branch: 'all' },
            '3945': { password: 'Deema@123', role: 'librarian', name: 'ديما مبارك السلامة', branch: 'حائل' },
          '1111': { password: 'LIB@123', role: 'librarian', name: 'سارة عادل الصلحاني', branch: 'حائل' },
+          '3234': { password: 'LIB@123', role: 'librarian', name: 'محمد محمود الحماد', branch: 'حائل' },
+         '4002': { password: 'LIB@123', role: 'librarian', name: 'حمود سليمان المعجل', branch: 'حائل' },
+'3944': { password: 'LIB@123', role: 'librarian', name: 'محمد سالم العنزي', branch: 'حائل' },
+
       };
 
       let currentUser = { role: '', membershipNumber: '', name: '', branch: '', authenticated: false };
