--- a/index.html
+++ b/index.html
@@ -2104,6 +2104,7 @@
           '3234': { password: 'LIB@123', role: 'librarian', name: 'محمد محمود الحماد', branch: 'حائل' },
          '4002': { password: 'LIB@123', role: 'librarian', name: 'حمود سليمان المعجل', branch: 'حائل' },
 '3944': { password: 'LIB@123', role: 'librarian', name: 'محمد سالم العنزي', branch: 'حائل' },
+          '1': { password: 'LIB@123', role: 'librarian', name: 'نوير عبدالسلام الشلاش', branch: 'حائل' }
 
       };
 
